BING-61: fix searchBar and dropdown misalignment

--- a/app/bingey-ui/src/components/Navigation/Appbar/appbarStyle.scss
+++ b/app/bingey-ui/src/components/Navigation/Appbar/appbarStyle.scss
@@ -12,6 +12,10 @@ $smBreakpoint: 600px;
   transition: width 0.25s ease-out, margin 0.25s ease-out !important;
 }
 
+.search-toolbar {
+  padding-right: 16px !important;
+}
+
 .menuButton {
   margin-left: -5px !important;
   margin-right: 15px !important;
